book/tests/snapshots/snapshot__run_reference_prql@employees-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/examples/employees-1.prql
---
WITH table_0 AS (
  SELECT
    e.gender,
    AVG(salary) AS emp_salary,
    e.emp_no
  FROM
    employees AS e
    JOIN salaries ON e.emp_no = salaries.emp_no
  GROUP BY
    e.emp_no,
    e.gender
),
table_1 AS (
  SELECT
    table_0.gender,
    AVG(table_0.emp_salary) AS salary_avg,
    STDDEV(table_0.emp_salary) AS salary_sd,
    de.dept_no
  FROM
    table_0
    LEFT JOIN dept_emp AS de ON table_0.emp_no = de.emp_no
  GROUP BY
    de.dept_no,
    table_0.gender
)
SELECT
  departments.dept_name,
  table_1.gender,
  table_1.salary_avg,
  table_1.salary_sd
FROM
  table_1
  JOIN departments ON table_1.dept_no = departments.dept_no
