book/tests/snapshots/snapshot__run_reference_prql@employees-2.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/examples/employees-2.prql
---
WITH table_0 AS (
  SELECT
    e.gender,
    AVG(salary) AS emp_salary,
    e.emp_no
  FROM
    employees AS e
    JOIN salaries ON e.emp_no = salaries.emp_no
  GROUP BY
    e.emp_no,
    e.gender
),
table_1 AS (
  SELECT
    AVG(table_0.emp_salary) AS salary_avg,
    STDDEV(table_0.emp_salary) AS salary_sd,
    dm.emp_no
  FROM
    table_0
    JOIN dept_emp AS de ON table_0.emp_no = de.emp_no
    JOIN dept_manager AS dm ON dm.dept_no = de.dept_no
    AND (de.from_date, de.to_date) OVERLAPS (dm.from_date, dm.to_date)
  GROUP BY
    dm.emp_no,
    table_0.gender
)
SELECT
  managers.first_name || ' ' || managers.last_name AS mng_name,
  managers.gender,
  table_1.salary_avg,
  table_1.salary_sd
FROM
  table_1
  JOIN employees AS managers ON table_1.emp_no = managers.emp_no
