book/tests/snapshots/snapshot__run_reference_prql@filter-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/filter-0.prql
---
SELECT
  employees.*
FROM
  employees
WHERE
  age > 25
