book/tests/snapshots/snapshot__run_reference_prql@from-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/from-0.prql
---
SELECT
  employees.*
FROM
  employees
