book/tests/snapshots/snapshot__run_reference_prql@from-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/transforms/from-1.prql
---
SELECT
  first_name
FROM
  employees AS e
