book/tests/snapshots/snapshot__run_reference_prql@functional-lang-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/internals/functional-lang-0.prql
---
SELECT
  *
FROM
  employees
WHERE
  age > 50
ORDER BY
  name
